Rydd opp i gradle dependencies og tester